--- a/index.html
+++ b/index.html
@@ -34,42 +34,6 @@
     </style>
 </head>
 <body>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-functions.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-storage.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
-    <script>  
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        var firebaseConfig = {
-         apiKey: "AIzaSyCNTeSCQDJ7i02QtKJBX58fykKMKgIiZ9E",
-         authDomain: "journeyx-b6325.firebaseapp.com",
-         databaseURL: "https://journeyx-b6325-default-rtdb.asia-southeast1.firebasedatabase.app",
-         projectId: "journeyx-b6325",
-         storageBucket: "journeyx-b6325.appspot.com",
-         messagingSenderId: "107524444033",
-         appId: "1:107524444033:web:ccbb3fdeb2b7c2f2ae6280"
-        };
-
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-    </script>
-    <script>  
-        var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/Build.loader.js";
-        var config = {
-            dataUrl: "Build/Build.data.unityweb",
-            frameworkUrl: "Build/Build.framework.js.unityweb",
-            codeUrl: "Build/Build.wasm.unityweb",
-            streamingAssetsUrl: "StreamingAssets",
-            companyName: "3Soup",
-            productName: "JourneyX",
-            productVersion: "0.1",
-      };
-    </script>
     <!--IMAGETARGETS-->
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
@@ -110,7 +74,7 @@
     </div>
     <script src="arcamera.js" type="text/javascript"></script>
     <script src="itracker.js" type="text/javascript"></script>
-    <script src="Build/real.loader.js"></script>
+    <script src="Build/JourneyX.loader.js"></script>
     <script>
             var initialize = async() =>{
                 var unityCanvas = document.querySelector("#unity-canvas");
@@ -143,9 +107,9 @@
                 
                 document.getElementById("startARDiv").style.display = "none";
                 createUnityInstance(document.querySelector("#unity-canvas"), {
-                    dataUrl: "Build/real.data.unityweb",
-                    frameworkUrl: "Build/real.framework.js.unityweb",
-                    codeUrl: "Build/real.wasm.unityweb",
+                    dataUrl: "Build/JourneyX.data.unityweb",
+                    frameworkUrl: "Build/JourneyX.framework.js.unityweb",
+                    codeUrl: "Build/JourneyX.wasm.unityweb",
                     streamingAssetsUrl: "StreamingAssets",
                     companyName: "3Soup",
                     productName: "JourneyX",
