--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 		<imagetarget id='rmn' src='targets/rmn.png'></imagetarget>
 		<imagetarget id='Scan_waffle' src='targets/Scan_waffle.png'></imagetarget>
 		<imagetarget id='Scan_tcm' src='targets/Scan_tcm.png'></imagetarget>
-		<imagetarget id='Scan_curry' src='targets/Scan_curry.jpg'></imagetarget>
-		<imagetarget id='Scan_playground' src='targets/Scan_playground.JPG'></imagetarget>
-		<imagetarget id='Scan_park' src='targets/Scan_park.jpg'></imagetarget>
+		<imagetarget id='Scan_curry' src='targets/Scan_curry.png'></imagetarget>
+		<imagetarget id='Scan_playground' src='targets/Scan_playground.png'></imagetarget>
+		<imagetarget id='Scan_park' src='targets/Scan_park.png'></imagetarget>
 		<imagetarget id='Scan_myanmar' src='targets/Scan_myanmar.png'></imagetarget>
 		<imagetarget id='Scan_mrt' src='targets/Scan_mrt.png'></imagetarget>
 		<imagetarget id='Scan_mall' src='targets/Scan_mall.jpeg'></imagetarget>
-		<imagetarget id='Scan_fountain' src='targets/Scan_fountain.jpg'></imagetarget>
+		<imagetarget id='Scan_fountain' src='targets/Scan_fountain.png'></imagetarget>
 		<imagetarget id='Scan_fish' src='targets/Scan_fish.png'></imagetarget>
 
     <video id="webcam-video" muted autoplay playsinline style="width:1px;position:absolute"></video>
