Added all scans/stamps

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		<imagetarget id='Scan_park' src='targets/Scan_park.png'></imagetarget>
 		<imagetarget id='Scan_myanmar' src='targets/Scan_myanmar.png'></imagetarget>
 		<imagetarget id='Scan_mrt' src='targets/Scan_mrt.png'></imagetarget>
-		<imagetarget id='Scan_mall' src='targets/Scan_mall.jpeg'></imagetarget>
+		<imagetarget id='Scan_mall' src='targets/Scan_mall.png'></imagetarget>
 		<imagetarget id='Scan_fountain' src='targets/Scan_fountain.png'></imagetarget>
 		<imagetarget id='Scan_fish' src='targets/Scan_fish.png'></imagetarget>
 
