--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             width: 100vw;
             overflow: hidden;
         }
+        body,
+        html {
+        overflow: hidden;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        }
         .ctaDiv {
             display: flex;
             flex-direction: column;
