--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         loadingBar.style.display = "block";
       }
       //Set Facing Mode here ('environment', 'user', '')
-      window.unityFacingMode = "environment";
+		window.unityFacingMode = "environment"
       window.WEBCAM_SETTINGS = {
         video: {
           facingMode: unityFacingMode,
